@@ -2,6 +2,12 @@ Revision history for Perl extension Module::Build.
 
 0.37_01 - 
 
+  [BUG FIXES]
+
+  - t/signature.t now uses a mocked Module::Signature; this should be
+    more robust across platforms as it only needs to confirm that
+    Module::Build is calling Module::Signature when expected
+
 0.3624 - Thu Jan 27 11:38:39 EST 2011
 
   - Fixed pod2html directory bugs and fixed creation of spurious blib
